Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5927

Broker does not support whitespace in passwords in SSL password file

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.28, 0.30
    • 0.31
    • C++ Broker
    • None

    Description

      qpid/sys/ssl/util.cpp reads passwords from the password file with
      ...
      std::string password;
      file >> password;
      ...

      The stream operator stops reading at the first whitespace character so a password of eg: "this is a password" (considered valid by certutil) will not be properly parsed by the broker.

      Possibly use std::getline(file, password); or a stream manipulator instead.

      Attachments

        Activity

          People

            gsim Gordon Sim
            chris.richardson Chris Richardson
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: