QPID-5927: allow for whitespace in password

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1637820 13f79535-47bb-0310-9956-ffa450edef68